--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina WEB</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li>inicio</li>
-                <li>opc 1</li>
-                <li>opc 2</li>
-                <li>mas info</li>
-            </ul>
-        </nav>
+      <nav></nav>
     </header>
-    <h1>Mi primer pagina web </h1>
-    <section></section>
-</body>
-
+    <section>
+        <h1>Hello world</h1>
+    </section>
+    <aside>
+      <ul>
+        <li>Inicio</li>
+        <li>Acerca de</li>
+        <li>Servicios</li>
+        <li>Quienes somos</li>
+        <a href="" target=""></a>
+      </ul>
+    </aside>
+    <footer>
+        <p>Derechos reservados &copy;</p>
+    </footer>
+  </body>
 </html>
